  - NEW: automatically download HapMap data in loadHapMap.py and simuAdmixture.py.
  - NEW: add two operators infoEval and infoExec that can be used to manipulate
	information fields during evolution.
  - NEW: operator stator popSize=True also calculates virtual subpop size using
		variable virtualPopSize.
  - BUG: fix a bug in the re-initialization of pyParentsChooser.

version 0.8.3 - (Rev 1412) Jan 17, 2008 
  - NEW: allow taggers to write pedigree files
  - NEW: introduce pedigreeParentsChooser to choose parents according to a given pedigree
  - NEW: introduce pedigreeMating to mate according to a given pedigree
  - NEW: add infoTagger, sexTagger, affectionTagger
  - NEW: add pedigree information handling functions
  - CHG: add more options to functions in hapMapUtil.py
  - CHG: remove MPI related setup, build and source code (revert to r1393 to retrieve the
		MPI related code).
  - BUG: Fix a bug of setting individual visibility of populations loaded from disk file.
  - NEW: improve the efficiency of MergePopulations and MergePopulationsByLoci when
		a lot of populaitons are involved.

version 0.8.2 - (Rev 1370) Nov 19, 2007
  - BUG: Fix saveFstat in simuUtil.py
  - NEW/CHG: rewrite pyMating, which now accepts a parents chooser, and an offspring generator.
  - NEW: add heteroMating to allow allow different mating scheme used for different
		subpopulations, or proportions of individuals
  - NEW: add selfMating mating scheme.
  - NEW: add various parent choosers.
  - NEW: add various offspring generators.
  - NEW: add null, duplicate, info, genotype, proportion splitters
  - NEW: add splitter interface to populations.

version 0.8.1 - (Rev 1254) Oct 05, 2007
  - NEW: Allow len(pops) == 1 in MergePopulationsByLoci(pops) and
	MergePopulations(pops)
  - BUG: Use /dev/urandom for unix users. os.path.isfile('/dev/urandom') 
		returns false even if this file does exist.
  - BUG: Fix the handling of binary option in command line, and handling of short 
		arguments.